# yan

./: Cargo.toml  README.md
src/: config.rs  cpu.rs  lib.rs  main.rs  memory.rs  os.rs  packages.rs  shell.rs  title.rs  uptime.rs
src/info/: cpu.rs  memory.rs  mod.rs  os.rs  shell.rs
