[package]
name = "yan"
version = "0.1.0"
authors = ["Yann Jorelle <yannjorelle@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
dirs = "3.0.2"
serde = { version = "1.0.125", features = ["derive"]}
toml = "0.5.8"